Updated PongJS to look and play better.

--- a/PongJS/index.html
+++ b/PongJS/index.html
@@ -1,9 +1,22 @@
 <html>
     <head>
-        <script src="math.js" type="text/javascript"></script>
-        <script src="neuralnet.js"></script>
-        <script src="AI.js"></script>
-        <script src="pong.js"></script>
+    <link rel="stylesheet" type="text/css" href="pong.css">
     </head>
-    <body></body>
+    <body>
+        <div class="center">
+            <p> Pong Vs a Neural Net </p>
+        </div>
+        <div class="clearfix"></div>
+        <div class="center">
+            <script src="math.js" type="text/javascript"></script>
+            <script src="neuralnet.js"></script>
+            <script src="AI.js"></script>
+            <script src="pong.js"></script>
+        </div>
+        <div class="clearfix"></div>
+        <div class="center">
+            Use the up and down arrows to play pong against the current best neural networks in the training set.  This list of neural networks is updated every 5 minutes.  These updates are automatically recognized by your browser and do not require a page refresh.  The code for the neural network training and this webpage can be found at <a href="https://github.com/weissj3/PongANN">https://github.com/weissj3/PongANN</a>. <br> 
+            Contact Info: jake.a.weiss@gmail.com
+        </div>
+    </body>
 </html>
